--- a/less/header.less
+++ b/less/header.less
@@ -20,6 +20,8 @@
             width: 70%;
             left: 15%;
             height: 35vh;
+
+            animation: risingGraphTablet 1s;
         }
 
         background-image: linear-gradient(to right bottom,
