--- a/less/variables.less
+++ b/less/variables.less
@@ -23,3 +23,15 @@
         top: 0;
     }
 }
+
+@keyframes risingGraphTablet {
+    from {
+        top: 35vh;
+        height: 0;
+    }
+
+    to {
+        height: 35vh;
+        top: 0;
+    }
+}
